# SerialPacker

./: .gitignore  Makefile  README.md  library.properties  pyproject.toml  serialpacker.py  test.py
debian/: .gitignore  changelog  control  rules
src/: SerialPacker.cpp  SerialPacker.h
tests/: test_basic.py
