[build-system]
requires = ["setuptools-scm","wheel","setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
line-length = 99

[tool.isort]
profile = "black"
# known_first_party = "foo"
line_length = 99
multi_line_output = 3

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.flake8]
max-line-length = 99
#ignore = ["F841","F401","E731","E502","E402","E127","E123","E203","E231","W503"]
ignore = ["F841","F401","E731","E502","E402","E127","E123","E203","E231","W503"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,check

[testenv]
setenv = 
    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
deps = 
    trio
    pytest
commands = 
    python3 -mpytest tests/

[testenv:check]
commands = 
    pylint moat tests
    flake8p moat tests
    black --check moat tests
    pylint serialpacker.py test.py
    flake8p serialpacker.py test.py
    black --check serialpacker.py test.py
deps = 
    black
    pytest
    pylint
    black serialpacker.py test.py
    flake8-pyproject
    flake8

"""

[tool.setuptools]
py-modules = ["serialpacker"]
packages = ["moat.micro.lib.serialpacker","moat.lib.serialpacker"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pylint.messages_control]
disable = "wrong-import-order,use-dict-literal,unspecified-encoding,ungrouped-imports,too-many-nested-blocks,too-many-locals,superfluous-parens,no-else-continue,fixme,consider-using-f-string,invalid-name,attribute-defined-outside-init,too-few-public-methods,too-many-instance-attributes,too-many-branches,too-many-statements,no-else-return,too-many-arguments,too-many-return-statements"


[tool.moat]
[project]
classifiers = ["Development Status :: 4 - Beta","License :: OSI Approved","Framework :: AnyIO","Framework :: Trio","Framework :: AsyncIO","Programming Language :: Python :: 3","Intended Audience :: Developers"]
dependencies = ["anyio ~= 3.0"]
dynamic = ["version"]
keywords = ["MoaT","serial packer"]
requires-python = ">=3.8"
name = "moat-micro-lib-serialpacker"
authors = [{email = "matthias@urlichs.de",name = "Matthias Urlichs"}]
description = "REPLACE ME"
readme = "README.md"

[project.license]
file = "LICENSE.txt"

[project.urls]
homepage = "https://m-o-a-t.org"
repository = "https://github.com/M-o-a-T/serialpacker"
